RESOLVED FIXED59342
PropertyMapHashTable.h should use adoptPtr instead of implicit conversions to PassRefPtr.
https://bugs.webkit.org/show_bug.cgi?id=59342
Summary PropertyMapHashTable.h should use adoptPtr instead of implicit conversions to...
David Levin
Reported 2011-04-25 14:07:20 PDT
PropertyMapHashTable.h should use adoptPtr instead of implicit conversions to PassRefPtr.
Attachments
Patch (949 bytes, patch)
2011-04-25 14:08 PDT, David Levin
no flags
Patch (1.67 KB, patch)
2011-04-25 14:11 PDT, David Levin
abarth: review+
David Levin
Comment 1 2011-04-25 14:08:52 PDT
David Levin
Comment 2 2011-04-25 14:11:31 PDT
David Levin
Comment 3 2011-04-25 14:16:49 PDT
Note You need to log in before you can comment on or make changes to this bug.