PropertyMapHashTable.h should use adoptPtr instead of implicit conversions to PassRefPtr. https://bugs.webkit.org/show_bug.cgi?id=59342

Reviewed by Adam Barth.

This patch is to prepare for the strict OwnPtr hack-a-thon.

* runtime/PropertyMapHashTable.h:
(JSC::PropertyTable::copy):

Canonical link: https://commits.webkit.org/74526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84799 268f45cc-cd09-0410-ab3c-d52691b4dbfc